--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
     "karma-cljs-test": "^0.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "rimraf": "^4.3.1",
-    "shadow-cljs": "2.22.0",
+    "shadow-cljs": "^3.2.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/base": "5.0.0-alpha.120",
-    "@mui/lab": "5.0.0-alpha.122",
-    "@mui/material": "5.11.12",
-    "@mui/styles": "5.11.12"
+    "@base-ui-components/react": "1.0.0-beta.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/lab": "7.0.1-beta.18",
+    "@mui/material": "^7.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "scripts": {
     "build": "npm run clean && npm run build:dev && npm run build:prod",
